--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="card-body">
                 <form method="POST" action="/articles/save">
-                    <input class="form-control" type="text" name="title" placeholder="Defina o titulo do Artigo!"/><br>
+                    <input class="form-control" type="text" name="title" placeholder="Defina o titulo do seu Artigo!"/><br>
                     <textarea class="form-control" placeholder="Escreva o Artigo aqui!" name="body" id= "article"></textarea><br>
                     <label>Categoria</label>
                     <select name="category" class="form-control">
