fullscreen in tinymce

--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -31,7 +31,7 @@
                 selector: "#article",
                 plugins: [
                 
-                    'advlist autolink link image lists print preview hr searchreplace wordcount insertdatetime media save table paste emoticons nonbreaking fullpage spellchecker'
+                    'advlist autolink link image lists print preview hr searchreplace wordcount insertdatetime media save table paste emoticons nonbreaking fullpage spellchecker fullscreen'
                 ]
             })
         </script>
