Update in header routes.

--- a/views/partials/navebar.ejs
+++ b/views/partials/navebar.ejs
@@ -1,13 +1,18 @@
 <nav class="navbar navbar-dark btn-success">
     <a class="navbar-brand" href="/">
-
-        Eli Gomes da Silva
-
+        Eli Gomes
     </a>
-    <ul class="navbar-nav mr-auto">
+
+    <ul class="navbar-nav d-flex flex-nowrap flex-row">
         <li class="nav-item">
-            <a class="nav-link" href="/admin/categories">Categorias</a>
+            <a class="nav-link mr-5" href="/admin/categories">Categorias</a>
             <!--herf ele aponta para rota-->
         </li> <!-- li = intem a class é para dizer que o item faz parte da navbar  -->
-    </ul> <!-- ul = uma lista-->
+        <li class="nav-item">
+            <a class="nav-link mr-5" href="/admin/articles/new">
+                Artigos
+            </a>
+        </li>
+        
+    </ul> <!-- ul = uma lista--> 
 </nav>
